[project]
name = "openclaw-memory"
version = "0.1.0"
description = "GraphRAG-based memory server for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]
